完善邀请函效果

--- a/invitation/index.html
+++ b/invitation/index.html
@@ -21,6 +21,17 @@
         <div id="swiper" class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="pages page1 swiper-slide">
+                    <div class="pageBg">
+                        <div>
+                            <img class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="0.3s" src="url(./../images/bg1.png">
+                        </div>
+                        <div>
+                            <img class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="1.5s" swiper-animate-delay="0s" src="url(./../images/bg2.png">
+                        </div>
+                        <div>
+                            <img class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="0.3s" src="url(./../images/bg3.png">
+                        </div>
+                    </div>
                     <div class="pageCon">
                         <div class="title">
                             <p class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.8s" swiper-animate-delay="0.5s">邀请函</p>
