--- a/line/index.html
+++ b/line/index.html
@@ -3,36 +3,26 @@
 
 <head>
     <meta charset="utf-8">
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        #container{
+            height: 500px;
+            width: 1000px;
+        }
+    </style>
 </head>
 
-<body style="height: 100%; margin: 0">
-    <div id="container" style="height: 100%"></div>
+<body>
+    <div id="container"></div>
+    <div class="payArea">
+        <span></span>
+    </div>
+    <script type="text/javascript" src="//cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts.min.js"></script>
-    <script type="text/javascript">
-        var dom = document.getElementById("container");
-        var myChart = echarts.init(dom);
-        var app = {};
-        option = null;
-        option = {
-            xAxis: {
-                type: 'category',
-                data: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']
-            },
-            yAxis: {
-                type: 'value'
-            },
-            series: [{
-                data: [820, 932, 901, 934, 1290, 1330, 1320],
-                type: 'line',
-                smooth: true
-            }],
-            animationEasing: 'elasticOut',
-            animationDuration: 1500
-        };
-        if (option && typeof option === "object") {
-            myChart.setOption(option, true);
-        }
-    </script>
+    <script type="text/javascript" src="./index.js"></script>
 </body>
 
 </html>
